fix popup scrollbar

--- a/jq_drag/css/popup.css
+++ b/jq_drag/css/popup.css
@@ -226,7 +226,7 @@
     font-size: 18px;
     padding: 20px;
     margin: 15px auto;
-    overflow: scroll;
+    overflow-y: scroll;
     width: 500px;
     height: 400px;
 }
